--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <input type="text" id="firstname" name="firstname" required minlength="2" maxlength="35">
                 <label for="lastname">Your Last Name</label><span class="required-field">*</span>
                 <input type="text" id="lastname" name="lastname" required minlength="2" maxlength="35">
+                <label for="age">Your Age</label>
+                <input type="number" name="age" id="age">
+                <h5>Sorry, you must be 21 or older to enter the constest.</h5>
             </div>
             <fieldset>
                 <legend>Your Contact Info</legend>
@@ -86,7 +89,7 @@
                         <option value="WY">Wyoming</option>
                     </datalist>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="number" id="zip" name="zip">
                 </div>
             </fieldset>
 
