--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label for="lastname">Your Last Name</label><span class="required-field">*</span>
                 <input type="text" id="lastname" name="lastname" required minlength="2" maxlength="35">
                 <label for="age">Your Age</label>
-                <input type="number" name="age" id="age">
+                <input type="number" name="age" id="age" min="21" max="120">
                 <h5>Sorry, you must be 21 or older to enter the constest.</h5>
             </div>
             <fieldset>
